# edLoRa

./: .gitignore  LICENSE  README.md  SKILL.md
cpp/: CMakeLists.txt  edlora.cpp  edlora.h  edlora_crypto.h
docs/: architecture.md  cli_monitor.md  getting_started.md  protocol_specification.md
examples/: cli_monitor.py  sim_cpp  simulate_flight  simulate_flight.cpp  simulate_flight.py  test_linux  test_linux.cpp  test_python.py
python/: README.md  pyproject.toml
python/docs/: architecture.md  getting_started.md  protocol_specification.md
python/edlora/: __init__.py  crypto.py
tests/: cpp_exporter  cpp_exporter.cpp  cross_language.py  test_robustness.py
tests/cpp/: test_bin  test_protocol  test_protocol.cpp
tests/python/: test_e2e_cross_lang.py  test_protocol.py
