[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edlora"
version = "1.0.0"
authors = [
  { name="benegedeniz", email="ege@benegedeniz.com" },
]
description = "A lightweight cross-language communication protocol for rocketry telemetry over LoRa."
readme = "../README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/benegedeniz/edlora"
"Bug Tracker" = "https://github.com/benegedeniz/edlora/issues"
